refactor: add dependency injection #10

--- a/src/app/features/showcase/presentation/showcase.component.html
+++ b/src/app/features/showcase/presentation/showcase.component.html
@@ -8,7 +8,12 @@
 
   <table>
     <thead>
-      <tr class="thead-tr"></tr>
+      <tr class="thead-tr">
+        <td>ID</td>
+        <td>NAME</td>
+        <td>DESCRIPTION</td>
+        <td>PRICE</td>
+      </tr>
     </thead>
     <tbody>
       <tr class="tbody-tr"></tr>
