feat: add initial atoms ui-component

--- a/src/app/features/showcase/presentation/showcase.component.html
+++ b/src/app/features/showcase/presentation/showcase.component.html
@@ -3,6 +3,7 @@
 
   <div>
     <p class="text-danger">Table sample</p>
+    <input-component></input-component>
     <button class="btn btn-primary submit-btn">Submit</button>
   </div>
 
@@ -13,6 +14,7 @@
         <td>NAME</td>
         <td>DESCRIPTION</td>
         <td>PRICE</td>
+        <td>INPUT</td>
       </tr>
     </thead>
     <tbody>
