refactor: add attribute to input-component

--- a/src/app/features/showcase/presentation/showcase.component.html
+++ b/src/app/features/showcase/presentation/showcase.component.html
@@ -4,6 +4,7 @@
   <div>
     <p class="text-danger">Table sample</p>
     <input-component></input-component>
+    <input-component override-style="input {color: green;}"></input-component>
     <button class="btn btn-primary submit-btn">Submit</button>
   </div>
 
