--- a/src/app/main.html
+++ b/src/app/main.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" initial-scale="1" />
+    <meta name="description" content="Vanilla TypeScript SPA Template" />
     <title>Vanillatte</title>
   </head>
   <body>
